<resources>
    <string name="app_name">PEI Taxi Driver</string>
    <string name="app_title">PEI Taxi Driver </string>
    <string-array name="array_languages">
        <item>@string/text_English</item>
        <item>@string/text_Arabic</item>
    </string-array>
    <string name="text_English" translatable="false">English</string>
    <string name="text_Arabic" translatable="false">Arabic</string>
    <string name="text_Spanish" translatable="false">Spanish</string>
    <string name="text_Chinese" translatable="false">Chinese</string>
    <string name="text_Japanese" translatable="false">Japanese</string>
    <string name="text_Korean" translatable="false">Korean</string>
    <string name="text_Portugese" translatable="false">Portugese</string>
    <string name="Map_key" translatable="false">AIzaSyBHYELwGcRWFknEdeAfBu6-DPjL-UdPCNY</string>
    <string name="PlaceApi_key" translatable="false"> </string>
    <string name="default_notification_channel_id" translatable="false">1029589359310</string>
    <string name="cancel_notification_channel_id" translatable="false">1029589359310</string>
    <string name="connectivity_notification_channel_id" translatable="false">1029589359314</string>
    <string name="default_notification_ride_admin" translatable="false">1029589359310</string>
    <string name="text_enter_social">or Enter Social Media</string>
    <string name="text_firstname">First Name</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_title_registration">Registration</string>
    <string name="text_log_in">Log In</string>
    <string name="text_send">Send</string>
    <string name="txt_NoInternet">Please Check Internet Connection</string>
    <string name="text_vehicle_info">Vehicle Info</string>
    <string name="hint_vehicle_number">Vehicle Number</string>
    <string name="hint_vehicle_model">Vehicle Model</string>
    <string name="text_next">Next</string>
    <string name="text_desc_doc_upload">We recommend you to scan the documents and attach here as JPEG, JPG or PNG and Size must be below 500 KB</string>
    <string name="text_documents">Documents</string>
    <string name="Alert_title_Permission">Permission</string>
    <string name="Alert_Msg_Location">Location and Phone State are mandatory permission please allow to access.  Are you sure you want to continue ?</string>
    <string name="Txt_Continue">Continue</string>
    <string name="Txt_Exit">Exit</string>
    <string name="text_submit">Submit</string>
    <string name="text_driving_license">Driving License</string>
    <string name="text_rc_book">RC Book</string>
    <string name="text_insurance">Insurance</string>
    <string name="text_expiry_date">Expiry Date</string>
    <string name="text_camera">Camera</string>
    <string name="text_galary">Galary</string>
    <string name="text_title_select_file">Select File</string>
    <string name="text_error_doc_pic_empty">Doc Image left empty!</string>
    <string name="text_error_doc_title_empty">Doc Title left empty!</string>
    <string name="text_error_doc_expiry_empty">Doc Expiry left empty!</string>
    <string name="text_error_contact_server">Error contacting server!!</string>
    <string name="text_attach">Attach</string>
    <string name="text_thanks_for_register">Many thanks for Signing up. Your documents will be checked by member of team and we will be in touch with you soon</string>
    <string name="Validate_Email">Email Shouldn\'t be Empty</string>
    <string name="Validate_Password">Password shouldn\'t be Empty</string>
    <string name="Validate_PasswordLength">Password shouldn\'t be less than 8 letters</string>
    <string name="hint_emailorPhone">Mobile Number / Email ID</string>
    <string name="text_title_Login">Login</string>
    <string name="DeviceNotSupport">This device is not supported.</string>
    <string name="Validate_Mob_Number">Enter Mobile Number</string>
    <string name="text_pass_sent_email">Your new password sent through Email..</string>
    <string name="Txt_VerifyMblNumber">Plese verify your Mobile Number</string>
    <string name="text_enter_phonenumber">Enter Phone Number</string>
    <string name="txt_NoInternet_title">No Internet</string>
    <string name="text_title_password">Password</string>
    <string name="txt_update">Update</string>
    <string name="txt_phone">Phone</string>
    <string name="text_general">General</string>
    <string name="txt_notification_sound">Notification Sound  /  </string>
    <string name="txt_on">ON</string>
    <string name="txt_OFF">OFF</string>
    <string name="txt_Lang">Language  /   </string>
    <string name="txt_Home">Home</string>
    <string name="text_profile">Profile</string>
    <string name="txt_Setting">Settings</string>
    <string name="txt_logout">Logout</string>
    <string name="text_edit">EDIT</string>
    <string name="text_basic_settings">Basic Settings</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_new">NEW</string>
    <string name="text_confirm">CONFIRM</string>
    <string name="text_contact_settings">Contact Settings</string>
    <string name="text_email_plain">EMAIL</string>
    <string name="text_offline">Offline</string>
    <string name="text_online">Online</string>
    <string name="text_complaint">Complaint</string>
    <string name="text_error_comments">Comments cannot be left empty!</string>
    <string name="text_error_title_complaint">Selection of Title is Required</string>
    <string name="text_soscontent">You Clicked SOS Button. Choose Whom you want to call for emergency</string>
    <string name="txt_sos">SOS</string>
    <string name="text_go_online_to_get_rides">Go Online To Get Rides</string>
    <string name="text_share">Share</string>
    <string name="text_share_content">https://play.google.com/store/apps/details?id=</string>
    <string name="text_document_number">Document Name</string>
    <string name="text_accept">ACCEPT</string>
    <string name="text_reject">REJECT</string>
    <string name="error_vehicle_number">Vehicle registeration number cannot be Empty!</string>
    <string name="error_vehicle_model">Vehicle model cannot be Empty!</string>
    <string name="error_vehicle_type">Select Vehicle Type!</string>
    <string name="text_sos">SOS</string>
    <string name="text_history">History</string>
    <string name="text_waiting_for_approval">Waiting for Approval</string>
    <string name="text_cancel">cancel</string>
    <string name="text_distance">Distance</string>
    <string name="text_time">Time</string>
    <string name="text_start_trip">START TRIP</string>
    <string name="text_end_trip">END TRIP</string>
    <string name="text_wait">Wait</string>
    <string name="text_payment">Payment</string>
    <string name="text_call">Call</string>
    <string name="text_arrived">Arrived</string>
    <string name="txt_cash">CASH</string>
    <string name="txt_card">CARD</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_mylocation">My location</string>
    <string name="text_cannot_cancel_trip_right_now">Cannot Cancel your trip right now!</string>
    <string name="hint_add_reason_for_cancel">Add reason for cancel</string>
    <string name="text_feedback">Feedback</string>
    <string name="hint_your_comments">Your Comments</string>
    <string name="text_base_price">Base Price</string>
    <string name="text_distance_cost">Distance Cost</string>
    <string name="text_time_cost">Time Cost</string>
    <string name="waiting_time_price">Waiting Price</string>
    <string name="text_referral_bonus">Referral Bonus</string>
    <string name="text_promo_bonus">Promo Bonus</string>
    <string name="txt_Total">Total</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_currency">\u0024</string>
    <string name="txt_min">Min</string>
    <string name="text_km">Km</string>
    <string name="text_new_request">New Request</string>
    <string name="text_error_empty_reason">Reason required for trip cancelation!</string>
    <string name="text_approved">Approved</string>
    <string name="text_declined">Declined</string>
    <string name="text_wallet">WALLET</string>
    <string name="text_cancel_trip">Cancel Trip</string>
    <string name="text_enable_location">Enable Location</string>
    <string name="text_setvice_tax">Service Tax</string>
    <string name="text_confirm_exit">Confirm to exit?</string>
    <string name="text_enable_location_content">To continue, let your device turn on location, which uses Google\'s location service</string>
    <string name="text_enable_internet">No Internet Connection Detected</string>
    <string name="text_wallet_deduction">Wallet Deduction</string>
    <string name="text_choose">Choose</string>
    <string name="text_select_language">Select Languange</string>
    <string name="text_error_doc_expiry_notvalid">Doc Expiry date not valid</string>
    <string name="text_vehicle_type">Vehicle Type</string>
    <string name="text_area">Area</string>
    <string name="text_waiting">Waiting ..</string>
    <string name="txt_fileSizeTooLarge">File Size Too Large</string>
    <string name="txt_fileNotfound">File Not Found</string>
    <string-array name="array_cancel_reason">
        <item>Lunch time</item>
        <item>Personal Emergency</item>
        <item>Vehicle Repair</item>
        <item>Natural Disaster</item>
        <item>Other(describe below)</item>
    </string-array>
    <string name="text_desc_logout">Confirm Logout ?</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="text_driver">Driver</string>
    <string name="text_pickup_location">Pickup Location</string>
    <string name="text_drop_location">Drop Location</string>
    <string name="text_rating_left_empty">Rating user left empty!</string>
    <string name="comments_left_empty">Comments cannot be left empty!</string>
    <string name="text_first_name_empty">First Name cannot be Empty!</string>
    <string name="text_error_lastname">Last Name cannot be Empty!</string>
    <string name="text_error_email">Email cannot be Empty!</string>
    <string name="text_error_email_valid">not a valid email!</string>
    <string name="text_error_password">Password cannot be Empty!</string>
    <string name="text_error_password_limit">Password MIN 8 and MAX 15 characters!</string>
    <string name="text_error_pass_empty">Phonenumber cannot be Empty!</string>
    <string name="text_error_area_empty">Area not available try after some time!</string>
    <string name="text_choose_area">Choose an area!</string>
    <string name="text_erro_newPas_empty">New Password cannot be Empty!</string>
    <string name="text_error_pass_char">Password minimum 8 characters!</string>
    <string name="text_error_confirm_empyt">Confirm Password cannot be Empty!</string>
    <string name="Validate_notmatch"><![CDATA[Confirm Password & New Password doesnot match!]]></string>
    <string name="text_corporate">Corporate</string>
    <string name="text_shareOn">Share State On</string>
    <string name="text_shareOff">Share State Off</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_payable">Total Payable</string>
    <string name="ride_share">Share Ride</string>
    <string name="text_firstname_validation">Please enter valid first name</string>
    <string name="text_lastname_validation">Please enter valid last name</string>
    <string name="text_error_phone_limit">Phone number should have Min 8 and Max 14 char</string>
    <string name="text_manage_documents">Manage Document</string>
    <string name="text_faq">FAQ</string>
    <string name="text_title_History">History</string>
    <string name="action_settings">Settings</string>
</resources>