<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="bz.pei.driver.ui.drawerscreen.dialog.logoutdialog.LogoutViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/while_dark"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_2sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                app:srcCompat="@drawable/ic_sad" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/text_desc_logout"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/clr_black"
                app:textfont="@{`Padauk.ttf`}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/clr_gray_light">

                <TextView
                    android:id="@+id/btn_confirm_canceltrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start|left"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{viewModel::confirmLogout}"
                    android:padding="14dp"
                    android:text="@string/text_confirm"
                    android:background="@color/colorPrimaryDark_click"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/while_dark"
                    app:textfont="@{`Padauk.ttf`}" />

                <View
                    android:layout_width="1.5dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/clr_line" />

                <TextView
                    android:id="@+id/btn_cancel_canceltrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end|right"
                    android:layout_weight="1"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:onClick="@{viewModel::cancelLogout}"
                    android:padding="14dp"
                    android:text="@string/text_cancel"
                    android:textAllCaps="true"
                    android:background="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/buttonTextColor"
                    app:textfont="@{`Padauk.ttf`}" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</layout>